# TalkingTrees

./: .gitignore  AUTOMATION_PATTERNS.md  BLACKBOARD_ARCHITECTURE.md  CLI_GUIDE.md  CODE_VIEW_FEATURE.md  COMPOSITE_MEMORY.md  CONVERSATION_COMPACT.md  COPY_PYTHON_FEATURE.md  EDITOR_IMPROVEMENTS.md  EDITOR_SHOWCASE.md  FINAL_REPORT.md  GUI_CAPABILITY_GAP_ANALYSIS.md  GUI_ENHANCEMENT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LAUNCHER_GUIDE.md  LICENSE  MEMORY_AND_STATE.md  MEMORY_FIX.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3A_SUMMARY.md  PHASE3B_SUMMARY.md  PHASE3_PLAN.md  PHASE4C_SUMMARY.md  PHASE4D_SUMMARY.md  PRODUCTION_SYSTEM.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  SDK_ENHANCEMENTS.md  SERIALIZER_ANALYSIS.md  SESSION_CONTEXT.md  TESTING_COMPLETE.md  TESTING_COMPLETE_FINAL.md  TESTING_STATUS.md  TREE_EDITOR_FEATURES.md  TUTORIAL_SUMMARY.md  generate_ultra_complex_demo.py  (+14 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEHAVIOR_REFERENCE.md  CHANGELOG.md  CODE_PANEL_DESIGN.md  DEPLOYMENT.md  GETTING_STARTED.md  LAUNCHER_GUIDE.md
docs/analysis/: IMPLEMENTATION_SUMMARY.md  REVERSIBILITY_ANALYSIS_REPORT.md
examples/: README.md  counter_memory_demo.py  memory_example.py  programmatic_editing.py  py_trees_basic_example.py  py_trees_robot.json  robot_helper_demo.json  robot_hybrid_edit.json  robot_v1.json  robot_v1_direct_edit.json  robot_v1_old.json  robot_v2.json  robot_v2_edited.json  round_trip_comparison.py  sdk_demo.py  simple_tree.json  test_automation.py  test_tree.json  ultra_complex_round_trip.py
examples/demos/: counter_memory_demo.py  programmatic_editing.py  py_trees_basic_example.py  round_trip_comparison.py  sdk_demo.py  ultra_complex_round_trip.py
examples/templates/: retry_task.json  simple_patrol.json
examples/trees/: 01_simple_sequence.json  02_simple_selector.json  03_retry_pattern.json  04_parallel_tasks.json  05_patrol_robot.json  06_debug_showcase.json  07_game_ai.json  08_stress_test.json  09_day_in_life_sim.json  10_guard_patrol_game.json  11_ultra_complex.json  12_smart_home_automation.json  README.md  manifest.json
scripts/: populate_tree_library.py  remove_custom_nodes.py  run_editor.sh  run_server.py  run_server.sh  run_visualization.sh  run_visualization_server.sh  stop_servers.sh
src/py_forest/: __init__.py  sdk.py
src/py_forest/adapters/: __init__.py  py_trees_adapter.py
src/py_forest/api/: __init__.py  dependencies.py  main.py
src/py_forest/behaviors/: __init__.py  examples.py
src/py_forest/cli/: __init__.py  client.py  config.py  main.py
src/py_forest/core/: __init__.py  blackboard_validator.py  builders.py  constants.py  debug.py  diff.py  events.py  exceptions.py  execution.py  extractors.py  history.py  profiler.py  registry.py  round_trip_validator.py  scheduler.py  serializer.py  snapshot.py  statistics.py  templates.py  utils.py  validation.py  visualization.py  websocket.py
src/py_forest/models/: __init__.py  debug.py  events.py  execution.py  schema.py  tree.py  validation.py  visualization.py
src/py_forest/storage/: __init__.py  base.py  filesystem.py
src/py_forest/utils/: __init__.py
src/talking_trees/: __init__.py  sdk.py
src/talking_trees/adapters/: __init__.py  py_trees_adapter.py
src/talking_trees/api/: __init__.py  dependencies.py  main.py
src/talking_trees/behaviors/: __init__.py  examples.py
src/talking_trees/cli/: __init__.py  client.py  config.py  main.py
src/talking_trees/core/: __init__.py  builders.py  constants.py  debug.py  (+18 more)
tests/: roundtrip_test_report.txt  test_all_examples_roundtrip.py  test_api_endpoints.py  test_builder_execution.py  test_compare_trees.py  test_complete_coverage.py  test_conversion_warnings.py  test_deterministic_uuids.py  test_integration.py  test_py_trees_adapter.py  test_rest_api_integration.py  test_round_trip.py  test_security_hardening.py  test_setblackboard_extraction.py  test_tree_layout.js  verify_signatures.py
tests/fixtures/: ultra_complex_tree.json
tutorial_assets/: py_trees_complex.json  py_trees_custom.json  py_trees_task_manager.json
tutorials/: 01_getting_started.py  01_py_trees_integration.py  02_complete_workflow.py  02_profiling_performance.py  03_version_control.py  04_robot_controller.py  05_py_trees_integration.py  06_complete_workflow.py  README.md  py_trees_complex.json  py_trees_custom.json  py_trees_decorators.json  py_trees_simple.json  py_trees_task_manager.json  robot_from_code.json
tutorials/assets/: py_trees_decorators.json
visualization/: GUI_ENHANCEMENT_PLAN.md  GUI_UPDATE_SUMMARY.md  README.md  USAGE.md  code_view.html  day_in_life.html  guard_patrol_game.html  gui_improvement_tracker.json  tree_diff_viewer.html  tree_editor.html  tree_editor.html.backup  tree_editor_pro.html
(+40 files in other folders)
