[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talking-trees"
version = "0.1.0"
description = "Serializable behavior trees with REST API - built on py_trees"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Deniz N. Cakan"}
]
keywords = ["behavior-trees", "ai", "robotics", "automation", "rest-api", "talking-trees"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "py-trees>=2.3.0",
    "pydantic>=2.12.3",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
    "rich>=14.2.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.1",
    "mypy>=1.18.2",
    "httpx>=0.28.1",
]
viz = [
    "graphviz>=0.21",
    "pyyaml>=6.0.3",
]

[project.scripts]
talkingtrees = "talking_trees.cli.main:main"

[project.urls]
Homepage = "https://github.com/dnzckn/talking_trees"
Documentation = "https://talking-trees.readthedocs.io"
Repository = "https://github.com/dnzckn/talking_trees"
Issues = "https://github.com/dnzckn/talking_trees/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
